--- a/public/styles.css
+++ b/public/styles.css
@@ -8,6 +8,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 100px;
 }
 
 .publishingDateContainer {
@@ -55,6 +56,29 @@ body {
     width: 100%;
 }
 
+button {
+    color: #fff;
+    background-color: #1db954;
+    font-size: 12px;
+    line-height: 1;
+    border-radius: 500px;
+    padding: 11px 32px 9px;
+    transition-duration: .3s;
+    border-width: 0;
+    letter-spacing: 2px;
+    min-width: 160px;
+    text-transform: uppercase;
+    white-space: normal;
+    touch-action: manipulation;
+    cursor: pointer;
+}
 
+button:hover {
+    background-color: #1ed760;
+}
+
+.playbutton {
+    margin-top: 20px;
+}
 
 
