--- a/public/styles.css
+++ b/public/styles.css
@@ -4,7 +4,7 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
-.rezicontainer {
+.appcontainer {
     display: flex;
     flex-direction: column;
     align-items: center;
