--- a/public/styles.css
+++ b/public/styles.css
@@ -35,7 +35,12 @@ body {
 
 .reziGrid {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+}
+@media only screen and (min-width: 1100px) {
+    .reziGrid {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
 }
 
 .rezi {
@@ -154,6 +159,10 @@ button:hover {
     max-width: 1200px;
     flex-direction: row;
     justify-content: space-between;;
+}
+
+#spotifylogin img {
+    max-width: 50vw;
 }
 
 .profilepic {
